--- a/index.html
+++ b/index.html
@@ -1,147 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Limerick GAA Hub — Hurling 2025 (JSON)</title>
-<link rel="preload" href="js/app_v7_1.js" as="script">
-<style>
-:root { --card:#ffffff; --muted:#6b7280; --accent:#00a651; --accent-weak:#e7f7ee; --line:#e9ecef; --text:#111; --text-soft:#334155; --bg:#f6f7f8; }
-* { box-sizing:border-box; }
-body { margin:20px; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial; background:var(--bg); color:var(--text); -webkit-font-smoothing:antialiased; }
-h1 { margin:0 0 6px 0; font-weight:800; } h2 { margin:0 0 12px 0; font-size:20px; }
-.sub { color:#444; margin-bottom:16px; } .sm-muted { color:#6b7280; font-size:12px; }
-button.btn { padding:8px 12px; border-radius:10px; border:1px solid var(--line); background:#fff; cursor:pointer; }
-button.btn:hover { background:#f1f5f9; }
-.navtabs { display:flex; gap:8px; margin:16px 0 8px; flex-wrap:wrap; }
-.navtab { padding:10px 14px; border-radius:999px; background:#ececec; cursor:pointer; font-weight:700; border:1px solid transparent; }
-.navtab.active { background:var(--accent); color:#fff; border-color:var(--accent); }
-.navpanel { display:none; } .navpanel.active { display:block; }
-/* menus */
-.h-row { display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin:8px 0 12px; }
-.h-trigger, .g-trigger { display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border-radius:999px; background:#eaf6ef; border:1px solid #cdebd8; font-weight:800; cursor:pointer; user-select:none; }
-.h-trigger::after, .g-trigger::after { content:"▾"; font-size:12px; }
-.menu { position:absolute; z-index:20; margin-top:8px; min-width:280px; background:#fff; border:1px solid var(--line); border-radius:12px; box-shadow:0 10px 24px rgba(0,0,0,.08); padding:6px; display:none; }
-.menu.open { display:block; } .menu-wrap { position:relative; display:inline-block; }
-.item { padding:10px 12px; border-radius:10px; cursor:pointer; font-weight:700; }
-.item:hover { background:#f1f9f4; } .item.active { background:var(--accent); color:#fff; }
-/* pills */
-.section-tabs { display:flex; gap:10px; margin:4px 0 14px; flex-wrap:wrap; position:relative; z-index:1; }
-.section-tabs .seg { padding:9px 14px; border-radius:999px; background:#efefef; cursor:pointer; font-weight:800; border:1px solid transparent; }
-.section-tabs .seg.active { background:var(--accent); color:#fff; border-color:var(--accent); }
-.pill { display:inline-block; padding:6px 10px; border-radius:999px; background:#e7f7ee; color:#065f46; font-size:13px; border:1px solid #c9ead8; }
-.card { background:#fff; border-radius:18px; box-shadow:0 8px 24px rgba(0,0,0,.05); padding:14px; }
-/* tables */
-.table-wrap { overflow-y:auto; border-radius:14px; border:1px solid var(--line); background:#fff; }
-table { width:100%; border-collapse:separate; border-spacing:0; table-layout:fixed; }
-thead th { position:sticky; top:0; background:#f8fafb; border-bottom:1px solid var(--line); font-size:14px; font-weight:800; color:#1f2937; text-align:left; padding:14px; }
-tbody td { padding:14px; border-bottom:1px solid var(--line); font-size:15px; }
-td.right, th.right { text-align:right; }
-tbody tr:nth-child(even) td { background:#fcfcfd; } tbody tr:hover td { background:#f1f9f4; }
-td.match { text-align:center; }
-.match-block { display:grid; grid-template-rows:auto auto auto; row-gap:3px; justify-items:center; }
-.match-score { font-weight:700; }
-.match-meta { font-size:11px; color:#6b7280; margin-top:2px; }
-.comp-badge { display:inline-flex; align-items:center; gap:6px; }
-.comp-code { font-weight:800; font-size:12px; padding:3px 8px; border-radius:999px; border:1px solid #dbece3; background:#eefaf4; color:#065f46; }
-.group-code { font-size:12px; color:#374151; }
-.status-badge { font-size:12px; padding:3px 8px; border-radius:999px; display:inline-block; border:1px solid var(--line); }
-.status-Fixture { background:#fff; } .status-Result { background:#eaf6ef; color:#065f46; border-color:#cdebd8; }
-.controls { display:flex; flex-wrap:wrap; gap:10px; margin:12px 0; }
-.controls > * { padding:10px 12px; border:1px solid var(--line); background:#fff; border-radius:12px; font-size:15px; min-height:42px; }
-.mobile-only { display:none; }
-@media (max-width:880px){
-  thead th, tbody td { padding:9px 7px; font-size:12px; }
-  th.rcol, td.rcol { width:2.2ch; text-align:center; } th.dcol, td.dcol { width:9ch; text-align:center; } th.tcol, td.tcol { width:4.4ch; text-align:center; } th.vcol, td.vcol { width:16ch; } th.stcol, td.stcol { width:1.8ch; text-align:center; }
-  td.match { padding:8px 7px; }
-  .mobile-only { display:block; font-size:11px; color:#6b7280; margin:6px 0 0 6px; }
-}
-#lgh-warning { display:none; padding:10px 12px; background:#fff3cd; color:#664d03; border:1px solid #ffe69c; border-radius:10px; margin:12px 0; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Limerick GAA Hub</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Limerick GAA Hub</h1>
-  <div class="sub"><strong>Hurling 2025</strong> — JSON-driven (full matrix ready)</div>
-
-  <div class="navtabs">
-    <div class="navtab active">Hurling</div>
-    <div class="navtab">Football</div>
-    <div class="navtab">About</div>
-    <button id="refresh" class="btn" title="Fetch latest data">Refresh</button>
-    <span class="sm-muted" id="last-updated"></span>
-  </div>
-
-  <div id="lgh-warning">Some features didn’t load. Ensure <code>js/app_v7_1.js</code> exists.</div>
-
-  <div class="card" style="margin-bottom:10px;">
-    <div class="h-row">
-      <div class="menu-wrap">
-        <div class="h-trigger" id="comp-trigger">Competition: <span id="comp-current">—</span></div>
-        <div class="menu" id="comp-menu"></div>
-      </div>
-      <div class="menu-wrap">
-        <div class="g-trigger" id="group-trigger">Group: <span id="group-current">—</span></div>
-        <div class="menu" id="group-menu"></div>
-      </div>
-      <div class="menu-wrap">
-        <div class="g-trigger" id="more-trigger">More ▾</div>
-        <div class="menu" id="more-menu">
-          <div class="item" data-target="by-team">By Team</div>
-          <div class="item" data-target="by-date">By Date</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="grid">
-    <div class="panel active card" id="group-panel">
-      <div class="headband">
-        <h2 id="panel-title">—</h2>
-        <span class="pill">Matches & Table</span>
-      </div>
-
-      <div class="controls card">
-        <select id="status">
-          <option value="">All (fixtures & results)</option>
-          <option value="Result">Results only</option>
-          <option value="Fixture">Fixtures only</option>
-        </select>
-      </div>
-
-      <div class="section-tabs">
-        <div class="seg active" data-view="matches">Matches</div>
-        <div class="seg" data-view="table">Table</div>
-      </div>
-
-      <div class="table-wrap matches-wrap">
-        <table id="g-table"><thead></thead><tbody></tbody></table>
-        <div class="mobile-only">R = Result, F = Fixture</div>
-      </div>
-
-      <div id="g-standings" style="margin-top:12px; display:none;">
-        <div class="table-wrap">
-          <table id="g-standings-table">
-            <thead>
-              <tr><th>Team</th><th class="right">P</th><th class="right">W</th><th class="right">D</th><th class="right">L</th><th class="right">PF</th><th class="right">PA</th><th class="right">Diff</th><th class="right">Pts</th></tr>
-            </thead><tbody></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-
-    <div class="panel card" id="by-team" style="display:none;">
-      <div class="headband"><h2>By Team</h2><span class="pill">All competitions</span></div>
-      <div class="controls card"><select id="team"><option value="">Select team…</option></select></div>
-      <div class="table-wrap"><table id="team-table"><thead></thead><tbody></tbody></table><div class="mobile-only">R = Result, F = Fixture</div></div>
-    </div>
-
-    <div class="panel card" id="by-date" style="display:none;">
-      <div class="headband"><h2>By Date</h2><span class="pill">Grouped by competition</span></div>
-      <div class="table-wrap"><table id="date-table"><thead></thead><tbody></tbody></table><div class="mobile-only">R = Result, F = Fixture</div></div>
-    </div>
-  </div>
-
-  <script src="js/app_v7_1.js"></script>
-  <script>window.addEventListener('load', ()=>{ if(window.LGH_V7_1_READY!==true) document.getElementById('lgh-warning').style.display='block'; });</script>
+    <nav>
+        <ul>
+            <li>Hurling
+                <ul>
+                    <li>Senior Group 1</li>
+                    <li>Senior Group 2</li>
+                    <li>By Team</li>
+                    <li>By Date</li>
+                </ul>
+            </li>
+            <li>Football (Coming Soon)</li>
+            <li>About (Coming Soon)</li>
+        </ul>
+    </nav>
+    <div id="content">Content loads here...</div>
+    <script src="js/app_v7_2.js"></script>
 </body>
 </html>
