--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
   <div id="panel-football" class="card" style="display:none;"><h2>Football</h2><div class="sm-muted">Coming soon.</div></div>
   <div id="panel-about" class="card" style="display:none;"><h2>About</h2><div class="sm-muted">Coming soon.</div></div>
 
-  <script src="js/app_v7_3.js"></script>
+  <script src="js/app_v7_3_1.js"></script>
   <script>window.addEventListener('load', ()=>{ if(window.LGH_V7_3_READY!==true) document.getElementById('lgh-warning').style.display='block'; });</script>
 </body>
 </html>
