--- a/index.html
+++ b/index.html
@@ -165,7 +165,25 @@ th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
 
   <!-- Football & About -->
   <div id="panel-football" class="card" style="display:none;"><h2>Football</h2><div class="sm-muted">Coming soon.</div></div>
-  <div id="panel-about" class="card" style="display:none;"><h2>About</h2><div class="sm-muted">Coming soon.</div></div>
+  <div id="panel-about" class="card" style="display:none;">
+    <h2>About</h2>
+    <p>
+      Limerick GAA Hub is designed to provide a clear and intuitive overview of fixtures and results — 
+      easily filterable by competition, team, or date. Over time, the aim is to build an archive of historical results.
+    </p>
+
+    <p>
+      Please note, this site is not associated with Limerick GAA - it is solely run by a club member with the aim of sharing information.
+    </p>
+
+    <p>
+      Find us on 
+      <a href="https://www.instagram.com/limerickgaahub" target="_blank" rel="noopener noreferrer">Instagram</a> and 
+      <a href="https://x.com/limerickgaahub" target="_blank" rel="noopener noreferrer">X</a>, 
+      or email us at <a href="mailto:limerickgaahub@gmail.com">limerickgaahub@gmail.com</a>.
+    </p>
+  </div>
+
 
   <script src="js/app_v7_3_1.js"></script>
   <script>window.addEventListener('load', ()=>{ if(window.LGH_V7_3_READY!==true) document.getElementById('lgh-warning').style.display='block'; });</script>
